--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,26 +1,11 @@
-main {
-  display:inline-block;
-}
-h1 {
-  color: green;
-  font-weight: 600;
-  font-size: 30px;
-  text-align: center;
-}
-article {
-  border: 2px solid red;
+* {
   margin: 0 auto;
 }
-p {
-  font-weight: 450;
-  text-align: justify;
-  line-height: 1.5;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
-  font-style: italic;
-  border:inherit ;
-}
-h1:hover {
-  font-size: 34px;
-  color: orangered;
-  transition: 30ms;
+img {
+  width: 600px;
+  height: 600px;
+  padding: 40px 50px 60px 10px;
+  background-color: aqua;
+  border: 4px dashed red;
+  border-radius: 40px;
 }
