--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,25 +1,30 @@
-.img { 
-  width:400px ;
-  height: 400px;
-  border-radius: 50% ;
-  object-fit: cover; 
+body {
+  width: 450px;
+  margin: 0 auto;
+  padding-top: 4px;
+  box-sizing: border-box;
 }
-.img-oldman {
+main {
+  width: 1200px;
+  border: 10px solid saddlebrown;
+
   
-  object-position: left;
 }
-.img-car {
-  object-position: 78%;
-  margin-left: 700px;
+.block {
+  margin: -2px;
+  display: inline-block ;
 }
-.bg-color {
-  width: 100%;
-  text-align: center;
-  background-image: url(/assets/img/tree-736885_960_720.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 500px;
-  border: 5px solid red;
-  background-size: cover;
-  height: 100vh;
+.white { 
+  display: none;
+  height: 150px;
+  width: 150px;
+  background-color:white;
+}
+.black {
+  background-color: black;
+  height: 150px;
+  width: 150px;
+}
+.black-last {
+  visibility: hidden;
 }
