--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,30 +1,74 @@
 body {
-  width: 450px;
-  margin: 0 auto;
-  padding-top: 4px;
+  background-color: black;
   box-sizing: border-box;
 }
-main {
+table {
+  overflow: hidden;
+  background-color: aliceblue;
+  font-size: 30px;
+  margin: 50px auto;
+  text-align: center;
   width: 1200px;
-  border: 10px solid saddlebrown;
+  border-collapse: collapse;
+  border-radius: 30px;
+}
+th,td {
+  padding: 5px;
+  font-weight: 500;
+}
+th {
+  line-height: ;
+}
+button {
+  border-radius: 15px;
+  width: 75%;
+  padding: 5px;
+  margin: 5px;
+  text-transform: uppercase;
+  font-size: 25px;
+  background-color: rgba(231, 228, 228, 0.817);
+}
+thead { 
+  color: aliceblue;
+  font-weight: bold;
+} 
+.th-head-1 {
+  font-size: 40px;
+  font-weight: 800;
+  background-color:rgba(71, 101, 171, 0.68)
+}
+.th-head-2 {
+  background-color: rgb(68, 97, 163);
 
-  
 }
-.block {
-  margin: -2px;
-  display: inline-block ;
+.th-head-3 {
+  background-color:rgb(20, 42, 92)
+
 }
-.white { 
-  display: none;
-  height: 150px;
-  width: 150px;
-  background-color:white;
+.th-head-4 {
+background-color: rgb(8, 25, 62);
 }
-.black {
-  background-color: black;
-  height: 150px;
-  width: 150px;
+.th-head-5 { 
+  background-color: rgb(3, 19, 54);
 }
-.black-last {
-  visibility: hidden;
+div {
+  font-weight: 800;
+}
+.price {
+  margin-top: 30px;
+  font-size: 50px;
+  font-weight: 700;
+}
+tbody {
+  font-size: 25px; 
+}
+.bg-color-light {
+  background-color:rgba(215, 211, 211, 0.573);
+}
+.bg-color-dark {
+  background-color: rgba(97, 97, 97, 0.29);
+}
+.left-side {
+  text-align: left;
+  padding-left: 35px;
 }
